[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "openai>=1.88.0",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "yt-dlp>=2025.6.9",
    "pillow>=10.0.0",
]
